# qr-code-generator

./: .gitignore  LICENSE  pyproject.toml
